# lab-2

./: CMakeLists.txt  main.cpp
Tests/: TestAll.cpp  TestAll.h  TestPrimeNumberSequence.cpp  TestPrimeNumberSequence.h  TestSequenceInterval.cpp  TestSequenceInterval.h
menu/: Console.cpp  Console.h  Option.cpp  Option.h  Read.cpp  Read.h  ReadInterval.cpp  ReadInterval.h  RunMenu.cpp  RunMenu.h  Show.cpp  Show.h
problem/: PrimeNumberSequence.h
problems/: PrimeNumberSequence.cpp  SequenceInterval.cpp  SequenceInterval.h
